@startuml
'https://plantuml.com/class-diagram

skinparam classAttributeIconSize 0
hide empty methods
hide empty attributes

class Company {
    -designation
}

class FreightNetwork {}

abstract class Location{
    -latitude
    -longitude
    -countryName
}

class Port {
    -identification
    -name
    -continent
    -toPortsDistance
}

class Capital{
    -name
    -latitude
    -longitude
    -country
    -continent
}




class TrafficManager {}



/'Multiplicidade'/
Company "1" -- "1" FreightNetwork : knows >
Location <|-- Port
FreightNetwork "*" -- "1..*" Location : of >
/'Dúvidas'/
TrafficManager "1..*" -- "1" FreightNetwork : manages >
Location <|-- Capital

@enduml